# CoQ-Japanese_v2

./: .coderabbit.yaml  .editorconfig  .gitignore  AGENTS.md  Launch CavesOfQud (Rosetta).command  README.md  pyproject.toml
.github/workflows/: ci.yml
Mods/QudJP/Assemblies/: AGENTS.md  QudJP.csproj  QudJP.sln
Mods/QudJP/Assemblies/QudJP.Analyzers/: FallbackLoggingAnalyzer.cs  HarmonyPatchTryCatchAnalyzer.cs  QudJP.Analyzers.csproj  TraceLogPrefixAnalyzer.cs
Mods/QudJP/Assemblies/QudJP.Analyzers.Tests/: FallbackLoggingAnalyzerTests.cs  HarmonyPatchTryCatchAnalyzerTests.cs  QudJP.Analyzers.Tests.csproj  TraceLogPrefixAnalyzerTests.cs
Mods/QudJP/Assemblies/QudJP.Tests/: QudJP.Tests.csproj
Mods/QudJP/Assemblies/src/: AssemblyInfo.cs
Mods/QudJP/Localization/: AGENTS.md  ActivatedAbilities.jp.xml  Books.jp.xml  ChiliadFactions.jp.xml  EmbarkModules.jp.xml  Factions.jp.xml  Genotypes.jp.xml  Languages.xml  Mutations.jp.xml  Naming.jp.xml  Options.jp.xml  Quests.jp.xml  Skills.jp.xml  SparkingBaetyls.jp.xml  Strings.ja.xml  Subtypes.jp.xml  Worlds.jp.xml
docs/: RULES.md  TOOLS.md  audit-bypass-routes.md  contributing.md  deployment.md  font-requirements.md  test-architecture.md
docs/decisions/: 0001-v1-v2-roles.md
docs/snapshots/: 2026-04-07-beta-l10n-status.md
scripts/: AGENTS.md  README.md  assemble_corpus.py  diff_beta_strings.py  inventory_beta_strings.py  launch_rosetta.sh  translate_corpus_batch.py  validate_assets.py
scripts/tests/: test_diff_beta_strings.py  test_inventory.py  test_validate_assets.py
(+63 files in other folders)
